# replikon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
diagrams/: datalogic.drawio
include/: chat_tree.h  constants.h  crdt.h  expected.h  sqlite.h  types.h  utils.h
include/crdt/: log.h  map.h  register.h
include/crdts/: register.h
include/dao/: message.h
include/traits/: crdt.h
src/: main.cpp  sqlite.cpp
tests/: test_log_crdt.cpp
